HelloUltraviolet/Fixtures/RejectedSource/Statements/AsyncReturnTypeMismatch/Source/Main.uv
//! Rejected statement specimen for async return value mismatch.

public procedure asyncReturnTypeMismatchReference() -> Async<(), (), i32, !> {
    return true
}
